# AI_OCR_INVOICE

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
scripts/: run_pipeline.py
src/invoice_ocr/: __init__.py  config.py  gemini_http_client.py  interfaces.py  models.py  pipeline.py  types.py  validation.py
src/invoice_ocr/exporters/: __init__.py  excel_exporter.py
src/invoice_ocr/extractors/: __init__.py  gemini_extractor.py
src/invoice_ocr/providers/: __init__.py  gemini_provider.py
tests/: test_excel_exporter.py  test_gemini_extractor.py  test_gemini_provider.py  test_invoice_validator.py
