[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-ocr"
version = "0.1.0"
description = "Production OCR invoice project"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]